add feature for send email, with MailJet version 1.2.3 because last version no working

--- a/IdentityProject.Web/appsettings.json
+++ b/IdentityProject.Web/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailJet": {
+    "ApiKey": "0f088579266eb4a69477d3659c68fd77",
+    "SecretKey": "c70b08b17ba028463b7954726b41430c",
+    "FromEmail": "jorge.ardila1641@correo.policia.gov.co",
+    "FromName": "Jorge Ardila"
+  }
 }
