--- a/IdentityProject.Business/IdentityProject.Business.csproj
+++ b/IdentityProject.Business/IdentityProject.Business.csproj
@@ -2,6 +2,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\IdentityProject.DataAccess\IdentityProject.DataAccess.csproj" />
+    <ProjectReference Include="..\IdentityProject.Services\IdentityProject.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
