refactoring code and add manual mapper in web layer

--- a/IdentityProject.Business/IdentityProject.Business.csproj
+++ b/IdentityProject.Business/IdentityProject.Business.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\IdentityProject.DataAccess\IdentityProject.DataAccess.csproj" />
     <ProjectReference Include="..\IdentityProject.Services\IdentityProject.Services.csproj" />
+    <ProjectReference Include="..\IdentityProject.Common\IdentityProject.Common.csproj" />
   </ItemGroup>
 
   <ItemGroup>
