--- a/IdentityProject.Web/appsettings.json
+++ b/IdentityProject.Web/appsettings.json
@@ -12,7 +12,7 @@
   "MailJet": {
     "ApiKey": "0f088579266eb4a69477d3659c68fd77",
     "SecretKey": "c70b08b17ba028463b7954726b41430c",
-    "FromEmail": "jorge.ardila1641@correo.policia.gov.co",
+    "FromEmail": "jorge.ardila@correo.com",
     "FromName": "Jorge Ardila"
   }
 }
